[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/Shots/BombShot.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Sounds/bomb_sound2.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="BombShot" type="Node2D"]
script = ExtResource( 1 )
warn_time = 3.0
radius = 100

[node name="ExplosionRange" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 17
gravity_vec = Vector2( 0, 0 )
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRange"]
shape = SubResource( 1 )

[node name="WarningTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="WarningTimer" to="." method="_on_WarningTimer_timeout"]
